--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
 body {
-  background: #f9f7fe;
+  background: #d9cdf7;
   font-family: "Roboto", sans-serif;
 }
 
 .weather-app {
-  background: white;
+  background: rgb(155, 169, 248);
   max-width: 600px;
   margin: 60px auto;
   padding: 30px;
@@ -35,4 +35,62 @@ body {
 header {
   border-bottom: 1px solid #f9f7fe;
   padding-bottom: 30px;
+}
+
+main {
+  padding: 32px 0;
+}
+
+.current-temperature {
+  font-size: 50px;
+}
+
+.current-weather {
+  display: flex;
+  justify-content: space-between;
+}
+
+.current-city {
+  font-size: 38px;
+  font-weight: 900;
+  margin: 0;
+}
+.current-details {
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.current-details strong {
+  color: #f65282;
+}
+
+.current-temperature-icon {
+  position: relative;
+  top: -8px;
+  font-size: 40px;
+  margin-right: 10px;
+}
+
+.current-temperature-value {
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.current-temperature-unit {
+  font-size: 28px;
+  position: relative;
+  top: -38px;
+}
+a {
+  color: #885df1;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  text-align: center;
+  padding-top: 15px;
+
+  color: rgba(39, 33, 66, 0.4);
 }
